fixed overlapping

--- a/style.css
+++ b/style.css
@@ -36,13 +36,16 @@ body {
 .navbar a {
   color: #fff;
   text-decoration: none;
+  font-size: 1q;
 }
 
 ul {
+  background-color: red;
   list-style: none;
   display: flex;
   flex-direction: row;
   gap: 1rem;
+  width: 70vw;
 }
 
 .content {
@@ -167,7 +170,8 @@ ul {
   display: flex;
   flex-direction: column;
   gap: 2rem;
-  align-self: center;
+  width: 80%;
+  max-width: 80vw;
 }
 
 .writeup span {
